# HomeAssistant

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md
docs/: development-efficiency-guidelines.md
firmware/: README.md
host/: README.md
host/greenhouse-manager/: .env.example  .m1-placeholder  Dockerfile  Dockerfile.pairing-lab  README.md  pyproject.toml
host/greenhouse-manager/src/greenhouse_manager/: __init__.py  app.py  config.py  credential_lifecycle.py  dynsec_api.py  dynsec_plan.py  h3_field_preflight.py  h3_legacy_bootstrap_preflight.py  ha_discovery.py  ingest.py  mqtt_service.py  node_firmware_mqtt_capability_gate.py  node_mqtt_auth_fallback_model.py  node_mqtt_board_lab.py  node_mqtt_board_lab_broker.py  node_mqtt_board_lab_common.py  node_mqtt_board_lab_matrix.py  node_mqtt_board_lab_mqtt.py  node_mqtt_board_lab_native.py  node_mqtt_board_lab_native_broker.py  node_mqtt_isolated_lab.py  node_mqtt_private_mosquitto.py  pairing_discovery.py  pairing_endpoint.py  pairing_intake.py  pairing_lab_cli.py  pairing_network_service.py  pairing_runtime.py  pairing_runtime_config.py  pairing_secure_transport.py  pairing_service.py  private_mosquitto_builder.py  project_state.py  registration.py  registration_cli.py  service_identity_plan.py  t1_backup.py  t1_broker_identity_activation_authorization.py  t1_broker_identity_activation_checks.py  t1_broker_identity_activation_handoff.py  (+79 more)
host/greenhouse-manager/src/greenhouse_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
host/greenhouse-manager/src/greenhouse_manager/schemas/: gh.telemetry-1.schema.json  h3_readiness_v1.json  node_mqtt_board_lab_observation_v1.json  project_state_v1.json
host/greenhouse-manager/tests/: conftest.py  manager_execution_preparation_fixtures.py  stage2c2_cross_language_vectors_20260721_v47.py  test_app_check_config.py  test_config.py  test_credential_lifecycle.py  test_dynsec_api.py  test_dynsec_plan.py  test_h3_field_preflight.py  test_h3_legacy_bootstrap_preflight.py  test_ha_discovery.py  test_ingest.py  test_mqtt_service.py  test_node_esphome_mqtt_auth_adapter_contract.py  test_node_firmware_mqtt_capability_gate.py  test_node_mqtt_auth_fallback_model.py  test_node_mqtt_board_lab.py  test_node_mqtt_board_lab_contract.py  test_node_mqtt_board_lab_native.py  test_node_mqtt_isolated_lab.py  test_node_mqtt_private_mosquitto.py  test_pairing_deployment_contract.py  test_pairing_discovery.py  test_pairing_endpoint.py  test_pairing_endpoint_secure_integration.py  test_pairing_intake.py  test_pairing_lab_cli.py  test_pairing_network_service.py  test_pairing_runtime.py  test_pairing_runtime_config.py  test_pairing_secure_transport.py  test_pairing_secure_transport_cleanup.py  test_pairing_secure_transport_hardening.py  test_pairing_service.py  test_private_mosquitto_builder.py  test_project_state.py  test_registration.py  test_registration_cli.py  test_schema_sync.py  test_service_identity_plan.py  (+99 more)
host/greenhouse-manager/tools/: run_t1_broker_identity_activation_authorization.py  run_t1_broker_identity_activation_decision_packet.sh  run_t1_broker_identity_activation_execution_preparation_packet.sh  run_t1_broker_identity_activation_handoff.py  run_t1_broker_identity_activation_readiness_authorization.py  run_t1_broker_identity_activation_readiness_bundle.py  run_t1_broker_identity_activation_readiness_transaction_plan.py  run_t1_broker_identity_activation_transaction.py  run_t1_broker_identity_host_replica_fault_matrix.py  run_t1_broker_identity_host_replica_plan.py  run_t1_broker_identity_isolated_transaction.py  run_t1_broker_identity_live_mount_gate.py  run_t1_broker_identity_postactivation_audit.py  run_t1_broker_identity_preactivation_gate.py  run_t1_broker_identity_production_activation_execute.py  run_t1_broker_identity_production_activation_orchestrator.py  run_t1_broker_identity_production_activation_packet.sh  run_t1_broker_identity_production_adapter_skeleton.py  run_t1_broker_identity_production_driver_contract.py  run_t1_broker_identity_production_driver_preflight.py  run_t1_broker_identity_production_executor_contract.py  run_t1_broker_identity_production_transaction_adapter_contract.py  run_t1_broker_identity_runtime_binding_manifest.py  run_t1_client_migration_audit.py  run_t1_homeassistant_mqtt_legacy_evidence_bridge.py  run_t1_homeassistant_mqtt_postactivation_handoff.py  run_t1_homeassistant_mqtt_reconfigure_handoff.py  run_t1_homeassistant_mqtt_target_gate.py  run_t1_manager_identity_migration_authorization.py  run_t1_manager_identity_migration_execution_authorization.py  run_t1_manager_identity_migration_execution_preparation.py  run_t1_manager_identity_migration_execution_transaction_gate.py  run_t1_manager_identity_migration_failure_diagnostic.py  run_t1_manager_identity_migration_host_replica.py  run_t1_manager_identity_migration_legacy_review_bridge.py  run_t1_manager_identity_migration_live_runtime_gate.py  run_t1_manager_identity_migration_postrollback_audit.py  run_t1_manager_identity_migration_preparation.py  run_t1_manager_identity_migration_production_driver_contract.py  run_t1_manager_identity_migration_production_driver_replica_matrix.py  (+10 more)
host/simulator/: Dockerfile  README.md  pyproject.toml
host/simulator/src/greenhouse_simulator/: __init__.py  app.py  config.py  credential_slots.py  mqtt_backoff.py  pairing.py  payload.py
host/simulator/tests/: test_config.py  test_credential_slots.py  test_mqtt_backoff.py  test_pairing.py  test_payload.py
project-state/: README.md  current-baseline.json  h3-readiness.json
protocols/: README.md  gh-t1-homeassistant-mqtt-official-reconfigure-postcheck-v92.md  gh-t1-homeassistant-mqtt-rotation-commit-bridge-v90.md  gh-t1-provisioning-control-recovery-live-authorization-v1.md
tools/: check_public_repository_safety.py  h3_n2_stage2d10_g4_command_protocol_20260723_v1.py  h3_n2_stage2d10_g4_manifest_gate_20260723_v1.py  h3_n2_stage2d10_g4_private_descriptor_gate_20260723_v1.py  h3_n2_stage2d1_boundary_gate_20260721_v49.py  h3_n2_stage2d2_candidate_mqtt_boundary_gate_20260721_v50.py  (+57 more)
(+616 files in other folders)
