[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "greenhouse-manager"
version = "0.4.3"
description = "Canonical MQTT state manager for the greenhouse monitoring system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.23,<5",
  "paho-mqtt>=2.1,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
greenhouse-manager = "greenhouse_manager.app:main"
greenhouse-manager-registration = "greenhouse_manager.registration_cli:main"
greenhouse-manager-t1-preflight = "greenhouse_manager.t1_preflight:main"
greenhouse-manager-t1-backup = "greenhouse_manager.t1_backup:main"
greenhouse-manager-t1-shadow = "greenhouse_manager.t1_shadow:main"
greenhouse-manager-t1-shadow-services = "greenhouse_manager.t1_shadow_services:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
greenhouse_manager = ["schemas/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
