[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "greenhouse-manager"
version = "0.4.21"
description = "Canonical MQTT state manager for the greenhouse monitoring system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.23,<5",
  "paho-mqtt>=2.1,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
greenhouse-manager = "greenhouse_manager.app:main"
greenhouse-manager-registration = "greenhouse_manager.registration_cli:main"
greenhouse-manager-t1-preflight = "greenhouse_manager.t1_preflight:main"
greenhouse-manager-t1-backup = "greenhouse_manager.t1_backup:main"
greenhouse-manager-t1-shadow = "greenhouse_manager.t1_shadow:main"
greenhouse-manager-t1-shadow-services = "greenhouse_manager.t1_shadow_services:main"
greenhouse-manager-t1-migration-package = "greenhouse_manager.t1_migration_package:main"
greenhouse-manager-t1-migration-rehearsal = "greenhouse_manager.t1_migration_rehearsal:main"
greenhouse-manager-t1-migration-readiness = "greenhouse_manager.t1_migration_readiness_live:main"
greenhouse-manager-t1-migration-stage = "greenhouse_manager.t1_migration_stage:main"
greenhouse-manager-t1-migration-stage-rehearsal = "greenhouse_manager.t1_migration_stage_rehearsal:main"
greenhouse-manager-t1-client-migration-audit = "greenhouse_manager.t1_client_migration_audit:main"
greenhouse-manager-t1-homeassistant-mqtt-target-gate = "greenhouse_manager.t1_homeassistant_mqtt_target_gate:main"
greenhouse-manager-t1-homeassistant-mqtt-reconfigure-handoff = "greenhouse_manager.t1_homeassistant_mqtt_reconfigure_handoff:main"
greenhouse-manager-t1-broker-identity-activation-handoff = "greenhouse_manager.t1_broker_identity_activation_handoff:main"
greenhouse-manager-t1-broker-identity-preactivation-gate = "greenhouse_manager.t1_broker_identity_preactivation_gate:main"
greenhouse-manager-t1-broker-identity-postactivation-audit = "greenhouse_manager.t1_broker_identity_postactivation_audit:main"
greenhouse-manager-t1-broker-identity-activation-authorization = "greenhouse_manager.t1_broker_identity_activation_authorization:main"
greenhouse-manager-t1-broker-identity-activation-transaction = "greenhouse_manager.t1_broker_identity_activation_transaction:main"
greenhouse-manager-t1-broker-identity-isolated-transaction = "greenhouse_manager.t1_broker_identity_isolated_transaction:main"
greenhouse-manager-t1-broker-identity-production-executor-contract = "greenhouse_manager.t1_broker_identity_production_executor_contract:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
greenhouse_manager = ["schemas/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/test_t1_migration_readiness.py" = ["SIM102"]
