[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "greenhouse-manager"
version = "0.4.64"
description = "Canonical MQTT state manager for the greenhouse monitoring system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.23,<5",
  "paho-mqtt>=2.1,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
greenhouse-manager = "greenhouse_manager.app:main"
greenhouse-manager-registration = "greenhouse_manager.registration_cli:main"
greenhouse-manager-t1-preflight = "greenhouse_manager.t1_preflight:main"
greenhouse-manager-t1-backup = "greenhouse_manager.t1_backup:main"
greenhouse-manager-t1-shadow = "greenhouse_manager.t1_shadow:main"
greenhouse-manager-t1-shadow-services = "greenhouse_manager.t1_shadow_services:main"
greenhouse-manager-t1-migration-package = "greenhouse_manager.t1_migration_package:main"
greenhouse-manager-t1-migration-rehearsal = "greenhouse_manager.t1_migration_rehearsal:main"
greenhouse-manager-t1-migration-readiness = "greenhouse_manager.t1_migration_readiness_live:main"
greenhouse-manager-t1-migration-stage = "greenhouse_manager.t1_migration_stage:main"
greenhouse-manager-t1-migration-stage-rehearsal = "greenhouse_manager.t1_migration_stage_rehearsal:main"
greenhouse-manager-t1-client-migration-audit = "greenhouse_manager.t1_client_migration_audit:main"
greenhouse-manager-t1-homeassistant-mqtt-target-gate = "greenhouse_manager.t1_homeassistant_mqtt_target_gate:main"
greenhouse-manager-t1-homeassistant-mqtt-reconfigure-handoff = "greenhouse_manager.t1_homeassistant_mqtt_reconfigure_handoff:main"
greenhouse-manager-t1-homeassistant-mqtt-legacy-evidence-bridge = "greenhouse_manager.t1_homeassistant_mqtt_legacy_evidence_bridge:main"
greenhouse-manager-t1-homeassistant-mqtt-postactivation-handoff = "greenhouse_manager.t1_homeassistant_mqtt_postactivation_handoff:main"
greenhouse-manager-t1-manager-identity-migration-preparation = "greenhouse_manager.t1_manager_identity_migration_preparation:main"
greenhouse-manager-t1-manager-identity-migration-authorization = "greenhouse_manager.t1_manager_identity_migration_authorization:main"
greenhouse-manager-t1-manager-identity-host-replica-plan = "greenhouse_manager.t1_manager_identity_migration_host_replica_adapters:main"
greenhouse-manager-t1-manager-identity-production-transaction-adapter-contract = "greenhouse_manager.t1_manager_identity_migration_production_transaction_adapter_contract:main"
greenhouse-manager-t1-manager-identity-production-driver-contract = "greenhouse_manager.t1_manager_identity_migration_production_driver_contract:main"
greenhouse-manager-t1-manager-identity-production-driver-replica-matrix = "greenhouse_manager.t1_manager_identity_migration_production_driver_replica_matrix:main"
greenhouse-manager-t1-manager-identity-live-runtime-gate = "greenhouse_manager.t1_manager_identity_migration_live_runtime_gate:main"
greenhouse-manager-t1-manager-identity-execution-preparation = "greenhouse_manager.t1_manager_identity_migration_execution_preparation:main"
greenhouse-manager-t1-manager-identity-execution-authorization = "greenhouse_manager.t1_manager_identity_migration_execution_authorization:main"
greenhouse-manager-t1-manager-identity-execution-transaction-gate = "greenhouse_manager.t1_manager_identity_migration_execution_transaction_gate:main"
greenhouse-manager-t1-manager-identity-stdlib-mqtt-preflight = "greenhouse_manager.t1_manager_identity_migration_stdlib_mqtt:main"
greenhouse-manager-t1-manager-identity-failure-diagnostic = "greenhouse_manager.t1_manager_identity_migration_failure_diagnostics:main"
greenhouse-manager-t1-broker-identity-activation-handoff = "greenhouse_manager.t1_broker_identity_activation_handoff:main"
greenhouse-manager-t1-broker-identity-preactivation-gate = "greenhouse_manager.t1_broker_identity_preactivation_gate:main"
greenhouse-manager-t1-broker-identity-postactivation-audit = "greenhouse_manager.t1_broker_identity_postactivation_audit:main"
greenhouse-manager-t1-broker-identity-activation-authorization = "greenhouse_manager.t1_broker_identity_activation_authorization:main"
greenhouse-manager-t1-broker-identity-activation-transaction = "greenhouse_manager.t1_broker_identity_activation_transaction:main"
greenhouse-manager-t1-broker-identity-isolated-transaction = "greenhouse_manager.t1_broker_identity_isolated_transaction:main"
greenhouse-manager-t1-broker-identity-production-executor-contract = "greenhouse_manager.t1_broker_identity_production_executor_contract:main"
greenhouse-manager-t1-broker-identity-live-mount-gate = "greenhouse_manager.t1_broker_identity_live_mount_gate:main"
greenhouse-manager-t1-broker-identity-production-adapter-skeleton = "greenhouse_manager.t1_broker_identity_production_adapter_skeleton:main"
greenhouse-manager-t1-broker-identity-host-replica-plan = "greenhouse_manager.t1_broker_identity_host_replica_adapters:main"
greenhouse-manager-t1-broker-identity-host-replica-fault-matrix = "greenhouse_manager.t1_broker_identity_host_replica_fault_matrix:main"
greenhouse-manager-t1-broker-identity-production-driver-contract = "greenhouse_manager.t1_broker_identity_production_driver_contract:main"
greenhouse-manager-t1-broker-identity-runtime-binding-manifest = "greenhouse_manager.t1_broker_identity_runtime_binding_manifest:main"
greenhouse-manager-t1-broker-identity-production-driver-preflight = "greenhouse_manager.t1_broker_identity_production_driver_preflight:main"
greenhouse-manager-t1-broker-identity-activation-readiness-bundle = "greenhouse_manager.t1_broker_identity_activation_readiness_bundle:main"
greenhouse-manager-t1-broker-identity-activation-readiness-authorization = "greenhouse_manager.t1_broker_identity_activation_readiness_authorization:main"
greenhouse-manager-t1-broker-identity-activation-readiness-transaction-plan = "greenhouse_manager.t1_broker_identity_activation_readiness_transaction_plan:main"
greenhouse-manager-t1-broker-identity-production-transaction-adapter-contract = "greenhouse_manager.t1_broker_identity_production_transaction_adapter_contract:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
greenhouse_manager = ["schemas/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/test_t1_migration_readiness.py" = ["SIM102"]
"src/greenhouse_manager/t1_manager_identity_migration_production_execution_packet.py" = ["F401"]
