[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "greenhouse-simulator"
version = "0.0.2"
description = "MQTT node simulator for the greenhouse monitoring system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "paho-mqtt>=2.1,<3",
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.23,<5",
  "pytest>=8.3,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
greenhouse-simulator = "greenhouse_simulator.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

